--- a/AufgabeTicketbestellung/MainWindow.xaml
+++ b/AufgabeTicketbestellung/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AufgabeTicketbestellung"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding AusgewaehlteTicketArt}" Height="450" Width="800">
     <StackPanel>
-        <ComboBox ItemsSource="{Binding TicketArten}"/>
+        <ComboBox ItemsSource="{Binding TicketArten}" SelectedItem="{Binding AusgewaehlteTicketArt}"/>
         <Label>Variante 1</Label>
     <Grid Background="{Binding Farbe}">
         <Grid.ColumnDefinitions>
