--- a/ProjektKinofilmverwaltung/MainWindow.xaml
+++ b/ProjektKinofilmverwaltung/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
                 <MenuItem Header="New" Click="MenuItem_Click_1"></MenuItem>
+                <MenuItem Header="Neues Genre" Click="NeuesGenre_Click"></MenuItem>
                 <MenuItem Header="Exit" Click="MenuItem_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="_Edit"/>
